Fix divider line z-index and vertical spacing of trails

--- a/app/assets/stylesheets/_base-typography.scss
+++ b/app/assets/stylesheets/_base-typography.scss
@@ -142,6 +142,7 @@ hr {
   position: relative;
   text-align: center;
   width: 100%;
+  z-index: 0;
 
   &:after {
     position: absolute;
