--- a/app/assets/stylesheets/_trails-show.scss
+++ b/app/assets/stylesheets/_trails-show.scss
@@ -22,6 +22,10 @@
     }
   }
 
+  .trails-progress {
+    margin-bottom: 5em;
+  }
+
   .exercises-container {
     .divider {
       margin-bottom: 1rem;
